Added Attention and fixed LaTeX

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -8899,3 +8899,30 @@ title = {{Loss Reserves and the Employment Status of the Appointed Actuary}},
 volume = {16},
 year = {2012}
 }
+
+@article{Bahdanau2015a,
+abstract = {Neural machine translation is a recently proposed approach to machine translation. Unlike the traditional statistical machine translation, the neural machine translation aims at building a single neural network that can be jointly tuned to maximize the translation performance. The models proposed recently for neural machine translation often belong to a family of encoder–decoders and encode a source sentence into a fixed-length vector from which a decoder generates a translation. In this paper, we conjecture that the use of a fixed-length vector is a bottleneck in improving the performance of this basic encoder–decoder architecture, and propose to extend this by allowing a model to automatically (soft-)search for parts of a source sentence that are relevant to predicting a target word, without having to form these parts as a hard segment explicitly. With this new approach, we achieve a translation performance comparable to the existing state-of-the-art phrase-based system on the task of English-to-French translation. Furthermore, qualitative analysis reveals that the (soft-)alignments found by the model agree well with our intuition.},
+archivePrefix = {arXiv},
+arxivId = {1409.0473},
+author = {Bahdanau, Dzmitry and Cho, Kyung Hyun and Bengio, Yoshua},
+eprint = {1409.0473},
+journal = {3rd International Conference on Learning Representations, ICLR 2015 - Conference Track Proceedings},
+pages = {1--15},
+title = {{Neural machine translation by jointly learning to align and translate}},
+year = {2015}
+}
+
+@inproceedings{Vaswani2017a,
+abstract = {The dominant sequence transduction models are based on complex recurrent or convolutional neural networks that include an encoder and a decoder. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 BLEU on the WMT 2014 English-to-German translation task, improving over the existing best results, including ensembles, by over 2 BLEU. On the WMT 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art BLEU score of 41.0 after training for 3.5 days on eight GPUs, a small fraction of the training costs of the best models from the literature.},
+archivePrefix = {arXiv},
+arxivId = {1706.03762v5},
+author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+booktitle = {Advances in Neural Information Processing Systems},
+eprint = {1706.03762v5},
+issn = {10495258},
+mendeley-groups = {To read},
+pages = {5999--6009},
+title = {{Attention is all you need}},
+volume = {2017-Decem},
+year = {2017}
+}
