start adding viz

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,3 +1,21 @@
+@misc{kuo2020explainability,
+      title={Towards Explainability of Machine Learning Models in Insurance Pricing}, 
+      author={Kevin Kuo and Daniel Lupton},
+      year={2020},
+      eprint={2003.10674},
+      archivePrefix={arXiv},
+      primaryClass={q-fin.RM}
+}
+
+@article{henckaerts2020boosting,
+  title={Boosting insights in insurance tariff plans with tree-based machine learning methods},
+  author={Henckaerts, Roel and C{\^o}t{\'e}, Marie-Pier and Antonio, Katrien and Verbelen, Roel},
+  journal={North American Actuarial Journal},
+  pages={1--31},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
 @article{Bahdanau2015a,
 abstract = {Neural machine translation is a recently proposed approach to machine translation. Unlike the traditional statistical machine translation, the neural machine translation aims at building a single neural network that can be jointly tuned to maximize the translation performance. The models proposed recently for neural machine translation often belong to a family of encoder–decoders and encode a source sentence into a fixed-length vector from which a decoder generates a translation. In this paper, we conjecture that the use of a fixed-length vector is a bottleneck in improving the performance of this basic encoder–decoder architecture, and propose to extend this by allowing a model to automatically (soft-)search for parts of a source sentence that are relevant to predicting a target word, without having to form these parts as a hard segment explicitly. With this new approach, we achieve a translation performance comparable to the existing state-of-the-art phrase-based system on the task of English-to-French translation. Furthermore, qualitative analysis reveals that the (soft-)alignments found by the model agree well with our intuition.},
 archivePrefix = {arXiv},
